--- a/index.html
+++ b/index.html
@@ -3,166 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Void Sanctuary | Community</title>
+  <title>Giggle Galaxy Books</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
-    * {
+    body {
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      background: linear-gradient(to bottom, #ffecd2, #fcb69f);
+      color: #333;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #0d0d0d;
-      color: #eee;
-      line-height: 1.6;
     }
     header {
-      background: #111;
-      padding: 20px 0;
+      background-color: #ff6f61;
+      color: white;
       text-align: center;
-      border-bottom: 1px solid #222;
-    }
-    header h1 {
-      font-size: 2rem;
-      color: #9b59b6;
+      padding: 20px;
+      font-size: 2em;
       letter-spacing: 2px;
     }
-    nav {
-      margin-top: 10px;
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 20px;
     }
-    nav a {
-      color: #aaa;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    nav a:hover {
-      color: #9b59b6;
-    }
-    section {
-      padding: 60px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      color: #9b59b6;
-      margin-bottom: 20px;
+    .book-card {
+      background-color: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      margin: 15px;
+      width: 250px;
       text-align: center;
+      overflow: hidden;
+      transition: transform 0.3s;
     }
-    p {
-      color: #ccc;
-      text-align: center;
-    }
-    .categories {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .card {
-      background: #1a1a1a;
-      padding: 25px;
-      border-radius: 12px;
-      text-align: center;
-      transition: 0.3s;
-      border: 1px solid #222;
-    }
-    .card:hover {
-      background: #2a2a2a;
+    .book-card:hover {
       transform: translateY(-5px);
     }
-    .join {
-      text-align: center;
-      margin-top: 30px;
+    .book-card img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
     }
-    .join a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 25px;
-      background: #9b59b6;
-      color: #fff;
+    .book-info {
+      padding: 15px;
+    }
+    .book-title {
+      font-size: 1.3em;
+      color: #ff6f61;
+      margin-bottom: 10px;
+    }
+    .book-desc {
+      font-size: 0.9em;
+      color: #555;
+      margin-bottom: 15px;
+    }
+    .button {
+      background-color: #ff6f61;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      padding: 10px 20px;
       text-decoration: none;
-      border-radius: 8px;
-      transition: 0.3s;
+      font-size: 1em;
+      transition: background-color 0.3s;
     }
-    .join a:hover {
-      background: #8e44ad;
+    .button:hover {
+      background-color: #ff4b3e;
     }
     footer {
+      background-color: #ff6f61;
+      color: white;
       text-align: center;
-      padding: 25px;
-      background: #111;
-      border-top: 1px solid #222;
-      color: #777;
-      font-size: 0.9rem;
+      padding: 10px;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Void Sanctuary</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#categories">Categories</a>
-      <a href="#join">Join</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    🌟 Giggle Galaxy Books 🌟<br>
+    <small>Fun, Magical, and Educational eBooks for Kids!</small>
   </header>
 
-  <section id="about">
-    <h2>Welcome to Void Sanctuary</h2>
-    <p>
-      Step into the sanctuary of endless connections — where gamers, movie lovers, anime fans, and tech geeks unite.
-      Void Sanctuary is your home in the digital realm. Join, chat, and build something awesome together.
-    </p>
-  </section>
-
-  <section id="categories">
-    <h2>Our Categories</h2>
-    <div class="categories">
-      <div class="card">
-        <h3>🎮 Gaming</h3>
-        <p>Play, stream, and share gaming experiences with the community.</p>
-      </div>
-      <div class="card">
-        <h3>🎬 Movies</h3>
-        <p>Discuss films, share reviews, and explore cinematic worlds.</p>
-      </div>
-      <div class="card">
-        <h3>💬 Chat</h3>
-        <p>Hang out with like-minded members and chill anytime.</p>
-      </div>
-      <div class="card">
-        <h3>🤖 Bots</h3>
-        <p>Discover and test cool community bots and automation tools.</p>
-      </div>
-      <div class="card">
-        <h3>🌀 Anime</h3>
-        <p>Talk about your favorite anime, characters, and fan theories.</p>
+  <div class="container">
+    <!-- Book 1 -->
+    <div class="book-card">
+      <img src="https://via.placeholder.com/250x300.png?text=The+Magic+Pencil" alt="The Magic Pencil">
+      <div class="book-info">
+        <div class="book-title">The Magic Pencil Adventure</div>
+        <div class="book-desc">Join Timmy and his talking pencil on a fun adventure through doodle land!</div>
+        <a href="https://payhip.com/b/MAGICPENCIL" target="_blank" class="button">Buy $2.99</a>
       </div>
     </div>
-  </section>
 
-  <section id="join">
-    <h2>Join the Community</h2>
-    <p>Choose your platform and become part of the Void Sanctuary.</p>
-    <div class="join">
-      <a href="https://t.me/" target="_blank">Join on Telegram</a>
-      <a href="https://discord.com/" target="_blank">Join on Discord</a>
+    <!-- Book 2 -->
+    <div class="book-card">
+      <img src="https://via.placeholder.com/250x300.png?text=Giggle+Galaxy+Tales" alt="Giggle Galaxy Tales">
+      <div class="book-info">
+        <div class="book-title">Giggle Galaxy Tales</div>
+        <div class="book-desc">A collection of silly and giggly stories that take you to space and back!</div>
+        <a href="https://payhip.com/b/GALAXYTALES" target="_blank" class="button">Free Download</a>
+      </div>
     </div>
-  </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Have suggestions or ideas? Reach out via <a href="mailto:voidsanctuary@community.com">voidsanctuary@community.com</a>.</p>
-  </section>
+    <!-- Book 3 -->
+    <div class="book-card">
+      <img src="https://via.placeholder.com/250x300.png?text=Rainbow+Riddles" alt="Rainbow Riddles">
+      <div class="book-info">
+        <div class="book-title">Rainbow Riddles</div>
+        <div class="book-desc">Colorful riddles and puzzles to make your brain sparkle like a rainbow!</div>
+        <a href="https://payhip.com/b/RAINBOWRIDDLES" target="_blank" class="button">Buy $1.99</a>
+      </div>
+    </div>
+  </div>
 
   <footer>
-    <p>© 2025 Void Sanctuary. All Rights Reserved.</p>
+    © 2025 Giggle Galaxy Books | Powered by Payhip
   </footer>
-
 </body>
 </html>
